--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,12 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
+    ["@babel/preset-env", {
+       "targets": {
+        "chrome": "58",
+        "ie": "11"
+       }
+     }],
+    "@babel/preset-react",
   ],
   "plugins": [
       "@babel/plugin-proposal-class-properties"
