--- a/.babelrc
+++ b/.babelrc
@@ -3,12 +3,15 @@
     ["@babel/preset-env", {
        "targets": {
         "chrome": "58",
-        "ie": "11"
+        "ie": "11",
+        "node": "current"
        }
      }],
-    "@babel/preset-react",
+    "@babel/preset-react"
   ],
   "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-transform-runtime",
+      "transform-async-to-generator"
   ]
 }
