--- a/package.json
+++ b/package.json
@@ -4,21 +4,33 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "es6-promise": "^4.2.5",
+    "fetch-ie8": "^1.5.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.4.0-beta.6"
+    "react-infinite-scroll-component": "^4.2.0",
+    "react-infinite-scroller": "^1.2.4",
+    "react-router-dom": "^4.4.0-beta.6",
+    "sinon": "^7.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "base-href-webpack-plugin": "^2.0.0",
     "css-loader": "^2.0.2",
@@ -30,8 +42,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.12.2",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "npm": "^6.5.0",
     "react-hot-loader": "^4.6.3",
     "react-redux": "^6.0.0",
     "react-test-renderer": "^16.7.0",
@@ -39,6 +53,7 @@
     "redux-thunk": "^2.3.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "testdouble": "^3.9.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
@@ -49,7 +64,8 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "./node_modules/.bin/eslint"
   },
   "author": "",
   "license": "ISC"
